<resources>
    <string name="app_name">Gtera E-Commerce</string>
    <string name="app_logo">Gtera E-Commerce</string>
    <string name="str_navigation_home">Home</string>
    <string name="str_navigation_cars">Cars</string>
    <string name="str_navigation_search">Search</string>
    <string name="str_navigation_profile">Profile</string>
    <string name="str_home_calculate_it_your_self">Calculate it yourself</string>
    <string name="str_home_choose_your_budget">Choose your Budget</string>
    <string name="str_home_ads">ADS</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="need_login">You need to login</string>
    <string name="require_login">You must login first to access this action.</string>
    <string name="require_login_pos_btn">Sign In</string>
    <string name="require_login_neg_btn">Cancel</string>
    <string name="str_error">Error</string>
    <string name="str_ok">OK</string>
    <string name="version" translatable="false">v</string>
    <string name="yes">Yes</string>
    <string name="confirmation">Confirmation</string>
    <string name="try_again">Try Again</string>
    <string name="mobile">Mobile :</string>
    <string name="check_connection">Please Check Internet Connection and try again</string>
    <string name="something_went_wrong">Something went wrong, please try again later.</string>
    <string name="no">No</string>
    <string name="log_out_success">Logged out successfully.</string>
    <string name="log_in_success">Logged in successfully.</string>
    <string name="error_title">Error Title</string>
    <string name="error_message">Error Message</string>
    <string name="powered_by" translatable="false">Powered by <b>Retailak</b></string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="share_content">Share Content</string>
    <string name="banner_success">Success</string>
    <string name="banner_error">Error</string>
    <string name="dummy_pass" translatable="false">123456</string>
    <string name="oops">Oops!</string>
    <string name="empty_default_txt">Sorry, No Results Found</string>
    <string name="str_my_car_empty_txt">You did\'t add any Car</string>
    <string name="banner_icon">banner icon</string>
    <string name="str_home_categories_new_cars">New Cars</string>
    <string name="str_home_categories_used_cars">Used Cars</string>
    <string name="str_home_news_header">Latest News</string>
    <string name="str_home_categories_header">Categories</string>
    <string name="str_home_top_deals_header">Top Deals</string>
    <string name="str_home_offers_header">Offers</string>
    <string name="str_egp">%s EGP</string>
    <string name="str_percentage">%s %%</string>
    <string name="str_discount_off">%s OFF</string>
    <string name="str_item">ITEM</string>
    <string name="str_advance_of">advance of %s</string>
    <string name="str_home_offers_per_month">/Per Month</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="signup">Sign up</string>
    <string name="sign_with">Or Sign in with</string>
    <string name="sign_with_facebook">Sign in with Facebook</string>
    <string name="sign_with_google">Sign in with google</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="or_signin_with">or sign in with</string>
    <string name="field_is_required">%s is required.</string>
    <string name="password_too_short">Password must contain at least 6 characters.</string>
    <string name="enter_valid_email">Enter a valid email address</string>
    <string name="enter_valid_phone">Enter a valid phone number</string>
    <string name="user_name_length_short">Name must contain at least 3 characters</string>
    <string name="start_special_characters">Name can not contain special character.</string>
    <string name="user_name">Name</string>
    <string name="looks_great">Looks Great!</string>
    <string name="str_profile_account_welcome">Welcome !</string>
    <string name="str_profile_account_detials">Account details</string>
    <string name="str_profile_change_password">Change Password</string>
    <string name="str_profile_notification">Notification</string>
    <string name="str_profile_messages">Messages</string>
    <string name="str_profile_compare">Compare</string>
    <string name="str_profile_favorite">Favorite</string>
    <string name="str_profile_get_in_toutch">Get in touch</string>
    <string name="str_profile_faq">FAQ</string>
    <string name="str_profile_logout">Logout</string>
    <string name="str_profile_language">Language</string>
    <string name="str_profile_sign_in">Sign In</string>
    <string name="str_profile_title">Profile</string>
    <string name="str_profile_log_out_confirmation_message">Oh no! You\'re leaving ... \n Are you sure?</string>
    <string name="str_brands_screen">Brands</string>
    <string name="str_brands_title">Brands</string>
    <string name="find_the_brand">Find the Brand</string>
    <string name="str_change_password_header">Change Password</string>
    <string name="str_found">Found</string>
    <string name="str_reset_password">Reset Password</string>
    <string name="str_forget_password_description">Enter your email address and we will send you a reset instruction.</string>
    <string name="str_reset_email_sent">Reset email sent</string>
    <string name="str_sign_in">Sign In</string>
    <string name="str_mail_sent_to">We have sent a instruction email to</string>
    <string name="str_old_password">Old Password</string>
    <string name="str_enter_password">Enter Password</string>
    <string name="str_new_password">New Password</string>
    <string name="str_confirm_password">Confirm Password</string>
    <string name="str_save">Save</string>
    <string name="str_updated_successfully">Updated Successfully.</string>
    <string name="str_registered_successfully">Registered Successfully.</string>
    <string name="str_current_password">Current Password</string>
    <string name="str_password_too_short">Password must contain at least 6 characters.</string>
    <string name="str_passwords_dont_match">Password and confirm password do not match.</string>
    <string name="str_photos">Photos</string>
    <string name="str_start_from">Start from %s</string>
    <string name="str_Liter">%s L.</string>
    <string name="str_KM">%s KM.</string>
    <string name="str_km">KM</string>
    <string name="str_doors">%s Doors.</string>
    <string name="str_seats">%s Seats</string>
    <string name="str_Order_now">Order Now</string>
    <string name="str_car_sorting">Sort</string>
    <string name="str_car_sorting_latest">Latest</string>
    <string name="str_car_high_prices">High Prices</string>
    <string name="str_car_low_prices">low Prices</string>
    <string name="str_car_popularity">Popularity</string>
    <string name="str_home_listing_news_title">News</string>
    <string name="str_home_listing_top_deals_title">Top Deals</string>
    <string name="str_home_listing_offers_title">Offers</string>
    <string name="str_search_error_msg">Please search with more than 2 characters</string>
    <string name="str_home_search_placeholder">Search for an item</string>
    <string name="str_search_length_error">Please, type more that 2 character</string>
    <string name="str_similar_news">Similar News</string>
    <string name="str_choose_your_budget">Choose Your Budget</string>
    <string name="str_from">From %s </string>
    <string name="str_to">to %s</string>
    <string name="str_latest_news">Latest News</string>
    <string name="str_car_added_to_compare_successfully">Car added to compare successfully</string>
    <string name="str_car_compare_empty_header">You did\'t Add any car</string>
    <string name="str_car_compare_empty_message">Start add your preferred cars to Compare</string>
    <string name="str_car_compare_Add">Add</string>
    <string name="str_car_compare_number_validation_message">Please select 2 cars at least to compare</string>
    <string name="str_car_compare_starting_price">Starting Price</string>
    <string name="str_car_compare_max_price">Max Price</string>
    <string name="str_car_compare_num_of_engine_gears">Number of engine gears</string>
    <string name="str_car_compare_fuel_tank_capacity">Fuel tank capacity</string>
    <string name="str_car_compare_acceleration">Acceleration</string>
    <string name="str_car_compare_num_of_seats">Number of Seats</string>
    <string name="str_car_compare_num_of_doors">Number of doors</string>
    <string name="str_car_compare_max_torque">Max Torque </string>
    <string name="str_car_compare_average_fuel_consumbtion">Average fuel consumption </string>
    <string name="str_car_compare_max_power_by_horse">Max power by horse </string>
    <string name="str_car_compare_body_type">Body type</string>
    <string name="str_car_compare_steering_wheel_type">Stearing wheel type</string>
    <string name="str_car_compare_pull_type">pull Type</string>
    <string name="str_car_compare_electronic_injection">Electronic injection</string>
    <string name="str_car_compare_Power">Power</string>
    <string name="str_car_compare_monthly_payment">Monthly payment</string>
    <string name="str_car_compare_manufacture_year">Manufacture year</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="log_removed_from_compare">Removed from compare list successfully.</string>
    <string name="str_empty_view_header">Opps!</string>
    <string name="str_empty_view_message">SomeThing went wrong, please try again</string>
    <string name="str_myCar">My Car</string>
    <string name="str_maintenance">Maintenance</string>
    <string name="str_my_advertising">My Advertising</string>
    <string name="str_compare">Compare</string>
    <string name="str_renewal_insurance">Renewal Insurance</string>
    <string name="str_account_details_header">Account Details</string>
    <string name="str_account_details_first_name">First name</string>
    <string name="str_account_details_last_name">Last name</string>
    <string name="str_account_details_email">Email</string>
    <string name="str_account_details_phone_number">Phone Number</string>
    <string name="str_account_details_birthdate">Birthdate</string>
    <string name="str_account_details_gender">Gender</string>
    <string name="str_account_details_governorate">Governorate</string>
    <string name="str_account_details_city">City</string>
    <string name="str_account_details_edit">Edit</string>
    <string name="str_profile_edit_first_name_length_short">First Name must contain at least 3 characters</string>
    <string name="str_profile_edit_first_name_special_characters">First Name can not contain special character</string>
    <string name="str_profile_edit_last_name_special_characters">Last Name can not contain special character</string>
    <string name="str_car_insurance_request_endorsement">Endorsement</string>
    <string name="str_car_insurance_request_endorsement_message">I acknowledge that I am the owner of the previous car with its data, and I know that 2% of the car model will be deducted every year from the total approved spare parts and also 2% depleted (damaged parts) Also, deduction of 10% of the total bill in the case of repair in the power of attorney, if any, in the document, the first five years of the model and 25% of the sixth year of the model until the tenth year of the model.</string>
    <string name="str_insurance_details_button_accept_and_pay_txt">Accept and Pay</string>
</resources>