<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.view.forget_password.ForgetPasswordActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.gtera.ui.authorization.resetpassword.ResetPasswordViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_8sdp">

        <TextView
            android:id="@+id/forget_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/din_next_medium"
            android:text="@string/forgot_password"
            android:textSize="@dimen/_18ssp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/forget_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/str_forget_password_description"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forget_title"
            app:layout_constraintWidth_percent="0.8" />


        <com.gtera.ui.base.edittext.EditText
            app:hint="@string/email"
            android:id="@+id/il_user_mail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            app:editText="@={viewModel.userMail}"
            app:inputType="textEmailAddress"
            app:isSuccess="@{viewModel.userMailStatus}"
            app:label="@string/email"
            app:labelColor="@color/colorTextSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forget_description"
            app:layout_constraintWidth_percent="0.94"
            app:message="@{viewModel.userMailError}" />



        <com.gtera.ui.base.buttons.LoadingButton
            android:id="@+id/btn_reset_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_47sdp"
            app:isLoading="@{viewModel.isLoading}"
            app:clickListener="@{() -> viewModel.resetPasswordBtnClick()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/il_user_mail"
            app:layout_constraintStart_toStartOf="@id/il_user_mail"
            app:layout_constraintTop_toBottomOf="@id/il_user_mail"
            app:layout_constraintVertical_bias="0.95"
            app:text="@string/str_reset_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>