<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.profile.change_password.ChangePasswordActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.gtera.ui.authorization.resetpassword.ChangePasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dim_change_password_layout_padding">

        <ImageView
            android:id="@+id/iv_change_password"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintDimensionRatio="3:1"
            android:src="@drawable/ic_change_password_transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/_10sdp"/>

        <com.gtera.ui.base.edittext.EditText
            app:hint="@string/str_enter_password"
            android:id="@+id/il_old_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_view_padding"
            app:editText="@={viewModel.oldPassword}"
            app:inputType="textPassword"
            app:labelColor="@color/changePasswordColorTextSecondary"
            app:isSuccess="@{viewModel.oldPasswordStatus}"
            app:label="@string/str_old_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_change_password"
            app:layout_constraintWidth_percent="0.94"
            app:message="@{viewModel.oldPasswordError}"
            app:passwordToggleEnabled="true"/>

        <com.gtera.ui.base.edittext.EditText
            android:id="@+id/il_new_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_view_padding"
            app:editText="@={viewModel.newPassword}"
            app:inputType="textPassword"
            app:labelColor="@color/changePasswordColorTextSecondary"
            app:isSuccess="@{viewModel.newPasswordStatus}"
            app:hint="@string/str_enter_password"
            app:label="@string/str_new_password"
            app:layout_constraintEnd_toEndOf="@id/il_old_password"
            app:layout_constraintStart_toStartOf="@id/il_old_password"
            app:layout_constraintTop_toBottomOf="@id/il_old_password"
            app:message="@{viewModel.newPasswordError}"
            app:passwordToggleEnabled="true"/>

        <com.gtera.ui.base.edittext.EditText
            android:id="@+id/il_confirm_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_view_padding"
            app:editText="@={viewModel.confirmPassword}"
            app:inputType="textPassword"
            app:labelColor="@color/changePasswordColorTextSecondary"
            app:isSuccess="@{viewModel.confirmPasswordStatus}"
            app:label="@string/str_confirm_password"
            app:hint="@string/str_enter_password"
            app:layout_constraintEnd_toEndOf="@id/il_old_password"
            app:layout_constraintStart_toStartOf="@id/il_old_password"
            app:layout_constraintTop_toBottomOf="@id/il_new_password"
            app:message="@{viewModel.confirmPasswordError}"
            app:passwordToggleEnabled="true"/>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/btn_change_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/il_confirm_password" />

        <com.gtera.ui.base.buttons.LoadingButton
            android:id="@+id/btn_change_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_change_password_layout_change_password_mrgn_top"
            android:layout_marginBottom="@dimen/dim_change_password_layout_change_password_mrgn_bottom"
            android:focusable="false"
            app:isLoading="@{viewModel.isLoading}"
            app:clickListener="@{() -> viewModel.changePasswordBtnClick()}"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/il_old_password"
            app:layout_constraintStart_toStartOf="@id/il_old_password"
            app:layout_constraintTop_toBottomOf="@id/view"
            app:layout_constraintVertical_bias="0.95"
            app:text="@string/str_save" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>