<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.gtera.ui.mycars.insurance.endorsement.EndorsementViewModel" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_15sdp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_15sdp" />
        <TextView
            android:id="@+id/tv_en_langauage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/str_car_insurance_request_endorsement"
            android:textSize="@dimen/_18ssp"
            app:layout_constraintEnd_toEndOf="@id/end"
            app:layout_constraintStart_toStartOf="@id/start"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/name_horzontal_line"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/tv_en_langauage"
            app:layout_constraintStart_toStartOf="@+id/tv_en_langauage"
            app:layout_constraintTop_toBottomOf="@+id/tv_en_langauage" />

        <TextView
            android:id="@+id/tv_endorsement_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/str_car_insurance_request_endorsement_message"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="@id/end"
            app:layout_constraintStart_toStartOf="@id/start"
            app:layout_constraintTop_toBottomOf="@+id/name_horzontal_line" />


        <com.gtera.ui.base.buttons.LoadingButton
            android:id="@+id/btn_accept_and_pay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            app:clickListener="@{()->viewModel.onAcceptAndPayBtnClick()}"
            app:isLoading="@{viewModel.isLoading}"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="@id/end"
            app:layout_constraintStart_toStartOf="@id/start"
            app:text="@string/str_insurance_details_button_accept_and_pay_txt" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>